[tool.poetry]
name = "graphrag"
version = "0.1.0"
description = "GraphRAG Fork"
authors = ["Shav Vimalendiran <shavgraphics@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
environs = "^11.0.0"
datashaper = "^0.0.49"
# Vector Stores
lancedb = "^0.11.0"
# Async IO
aiolimiter = "^1.1.0"
aiofiles = "^24.1.0"
# LLM
openai = "^1.37.1"
nltk = "3.8.1"
tiktoken = "^0.7.0"
# Data-Sci
numba = "0.60.0"
numpy = "^1.25.2"
graspologic = "^3.4.1"
networkx = "^3"
fastparquet = "^2024.2.0"
scipy = "1.12.0"
# Configuration
pyyaml = "^6.0.1"
pyaml-env = "^1.2.1"
python-dotenv = "^1.0.0"
# Network
tenacity = "^8.5.0"
swifter = "^1.4.0"
pydantic = "^2"
rich = "^13.6.0"
textual = "^0.74.0"
devtools = "^0.12.2"
typing-extensions = "^4.12.2"
# Azure
azure-storage-blob = "^12.19.0"
azure-identity = "^1.17.1"
json-repair = "^0.25.3"
azure-search-documents = "^11.5.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
coverage = "^7.6.0"
ipykernel = "^6.29.4"
nbconvert = "^7.16.3"
poethepoet = "^0.27.0"
pyright = "^1.1.371"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.4"
pytest-timeout = "^2.3.1"
ruff = "^0.5.2"
semversioner = "^2.0.3"
update-toml = "^0.2.1"

[build-system]
# A list of dependencies required to build your package, making this key mandatory
requires = ["poetry-core"]
# The Python object used to perform the build process
build-backend = "poetry.core.masonry.api"
